[package]
name = "keeper"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
derive_more = { version = "1.0.0-beta.6", features = ["from"] }
env_logger = "0.11"
log = "0.4"
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
mongodb = { version = "2", features = ["tokio-runtime"] }
